po-mode: Fix incompatibility with the forthcoming Emacs 29.
Patch by Takesi Ayanokoji <ayanokoji.takesi@gmail.com>.

* gettext-tools/emacs/po-mode.el (po-font-lock-keywords): Use
font-lock-constant-face, introduced in Emacs 20.3, instead of the
long-deprecated font-lock-reference-face.
* NEWS: Mention it.

--- a/NEWS
+++ b/NEWS
@@ -19,6 +19,9 @@ Version 0.21.2 - February 2023
 * xgettext:
   The xgettext option '--sorted-output' is now deprecated.
 
+* Emacs PO mode:
+  Fix an incompatibility with Emacs version 29 or newer.
+
 Version 0.21.1 - October 2022
 
 * Runtime behaviour:
