--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-Version 0.21.2 - February 2023
+Version 0.21.2 - May 2023
 
 * PO file format:
   - When a #: line contains references to file names that contain spaces,
@@ -12,9 +12,12 @@ Version 0.21.2 - February 2023
     option.
 
 * Programming languages support:
-  - C, C++: xgettext now supports gettext-like functions that take wide strings
-    (of type 'const wchar_t *', 'const char16_t *', or 'const char32_t *') as
-    arguments.
+  - C, C++:
+    o xgettext now supports gettext-like functions that take wide strings
+      (of type 'const wchar_t *', 'const char16_t *', or 'const char32_t *')
+      as arguments.
+    o xgettext now recognizes numbers with digit separators, as defined by
+      ISO C 23, as tokens.
   - Tcl: xgettext now supports the \x, \u, and \U escapes as defined in
     Tcl 8.6.
 
