format-c: Recognize size specifiers w8, w16, w32, w64, wf8, wf16, wf32, wf64.
* gettext-tools/src/format-c.c (INVALID_SIZE_SPECIFIER): New macro.
* gettext-tools/src/format-c-parse.h (format_parse_entrails): Accept only one
size specifier, not a sequence of size specifiers. Accept "wN" and "wfN",
where N = 8, 16, 32, 64. Reject integer size specifiers for floating-point
directives. Reject integer size specifiers other than "l" for %c and %s.
* gettext-tools/tests/format-c-1: Add more test cases.
* gettext-tools/tests/format-c-2: Likewise.
* NEWS: Mention it.

--- a/NEWS
+++ b/NEWS
@@ -20,6 +20,9 @@ Version 0.21.2 - May 2023
       ISO C 23, as tokens.
     o xgettext and msgfmt now recognize the format string directive %b
       (for binary integer output, as defined by ISO C 23) in format strings.
+    o xgettext and msgfmt now recognize the argument size specifiers
+      w8, w16, w32, w64, wf8, wf16, wf32, wf64 (as defined by ISO C 23)
+      in format strings.
   - Tcl: xgettext now supports the \x, \u, and \U escapes as defined in
     Tcl 8.6.
 
