--- a/NEWS
+++ b/NEWS
@@ -25,6 +25,8 @@ Version 0.21.2 - May 2023
       in format strings.
     o xgettext and msgfmt now recognize C++ format strings, as defined by
       ISO C++ 20.  They are marked as 'c++-format' in POT and PO files.
+      A new example has been added, 'hello-c++20', that illustrates how
+      to use these format strings with gettext.
   - Tcl: xgettext now supports the \x, \u, and \U escapes as defined in
     Tcl 8.6.
 
