--- a/gettext-tools/doc/msgfmt.texi
+++ b/gettext-tools/doc/msgfmt.texi
@@ -382,6 +382,18 @@ converted to UTF-8 encoding before being stored in a MO file; this helps
 avoiding conversions at run time, since nowadays most locales use the
 UTF-8 encoding.
 
+@item --no-redundancy
+@opindex --no-redundancy@r{, @code{msgfmt} option}
+Don't pre-expand ISO C 99 <inttypes.h> format string directive macros.
+By default, messages that are marked as @code{c-format} and contain
+ISO C 99 <inttypes.h> format string directive macros are pre-expanded
+for selected platforms, and these redundant expansions are stored in the
+MO file.  These redundant expansions make the translations of these
+messages work with the @code{gettext} implementation in the @code{libc}
+of that platform, without requiring GNU @code{gettext}'s @code{libintl}.
+The platforms that benefit from this pre-expansion are those with the
+musl libc.
+
 @item -a @var{number}
 @itemx --alignment=@var{number}
 @opindex -a@r{, @code{msgfmt} option}
