msgmerge: Deprecate option '--sort-output'.
Reported by Ben Siemerink <gnu@mail.qoben.com> in
<https://savannah.gnu.org/bugs/?61249>.

* gettext-tools/src/msgmerge.c (main): Warn when option '--sort-output' is used.
(usage): Mark the option '--sort-output' deprecated.
* gettext-tools/doc/msgmerge.texi: Likewise.
* NEWS: Mention it.

--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,9 @@ Version 0.23 - July 2023
 * Programming languages support:
   - Glade: xgettext has improved support for GtkBuilder 4.
 
+* msgmerge:
+  - The msgmerge option '--sorted-output' is now deprecated.
+
 Version 0.22 - June 2023
 
 * PO file format:
