intl: Treat C.UTF-8 locale like C locale.
The wiki page https://sourceware.org/glibc/wiki/Proposals/C.UTF-8
says that "Setting LC_ALL=C.UTF-8 will ignore LANGUAGE just like it
does with LC_ALL=C." This is now implemented in glibc. Implement it
for other platforms as well.

* gettext-runtime/intl/dcigettext.c (DCIGETTEXT, guess_category_value): Treat
C.<encoding> locale like the C locale.
* gettext-runtime/NEWS: Mention it.
* NEWS: Likewise.
* gettext-tools/tests/intl-0: New file, based on gettext-tools/tests/intl-1.
* gettext-tools/tests/Makefile.am (TESTS): Add it.

--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,12 @@
-Version 0.23 - July 2023
+Version 0.23 - October 2023
 
 * Programming languages support:
   - Glade: xgettext has improved support for GtkBuilder 4.
+
+* Runtime behaviour:
+  - In the C.UTF-8 locale, like in the C locale, the *gettext() functions
+    now return the msgid untranslated. This is relevant for GNU systems,
+    Linux with musl libc, FreeBSD, NetBSD, OpenBSD, Cygwin, and Android.
 
 * msgmerge:
   - The msgmerge option '--sorted-output' is now deprecated.
