--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Version 0.22.4 - November 2023
+
+* Bug fixes:
+  - AM_GNU_GETTEXT now recognizes a statically built libintl on macOS and AIX.
+  - Build fixes on AIX.
+
 Version 0.22.3 - October 2023
 
 * Portability:
