xgettext: Vala: Flag strings on which the method 'printf' is used as c-format.
* gettext-tools/src/x-vala.c (token_type_semicolon): New enum item.
(phase3_get): Recognize semicolon tokens.
(phase4_pushback, phase4_pushback_length): New variables.
(phase4_get): Renamed from x_vala_lex. Handle pushback.
(phase4_unget, x_vala_lex, x_vala_unlex): New functions.
(extract_balanced): Handle method invocations .printf and .vprintf. Return when
a semicolon was seen.
(extract_vala): Initialize phase4_pushback_length.
* gettext-tools/tests/xgettext-vala-6: Add tests for printf used as method.
* gettext-tools/tests/xgettext-vala-7: New file.
* gettext-tools/tests/Makefile.am (TESTS): Add it.
* NEWS: Mention the change.

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 Version 0.23 - December 2023
 
 * Programming languages support:
+  - Vala: Improved recognition of format strings when the string.printf method
+    is used.
   - Glade: xgettext has improved support for GtkBuilder 4.
 
 * Runtime behaviour:
