--- a/gettext-tools/doc/lang-python.texi
+++ b/gettext-tools/doc/lang-python.texi
@@ -1,5 +1,5 @@
 @c This file is part of the GNU gettext manual.
-@c Copyright (C) 1995-2021 Free Software Foundation, Inc.
+@c Copyright (C) 1995-2023 Free Software Foundation, Inc.
 @c See the file gettext.texi for copying conditions.
 
 @node Python
@@ -92,3 +92,20 @@ individual arguments from format strings like this is only possible with
 the named argument syntax.  (With unnamed arguments, Python -- unlike C --
 verifies that the format string uses all supplied arguments.)
 @end itemize
+
+A note about f-strings (PEP 498): @code{xgettext}
+@itemize @bullet
+@item
+syntactically recognizes f-strings,
+@item
+is able to extract f-strings that contain no sub-expressions.
+@end itemize
+@noindent
+However, @code{xgettext} does not extract f-strings marked for translation
+that contain sub-expressions.  This will not work as expected:
+@smallexample
+_(f"The file @{file[i]@} does not exist.")
+@end smallexample
+@noindent
+because the translator is generally not a programmer and should thus not be
+confronted with expressions from the programming language.
