--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,8 @@ Version 0.23 - December 2023
 
 * Programming languages support:
   - Python: xgettext now recognizes the f-string syntax.
+  - Java: Improved recognition of format strings when the String.formatted
+    method is used.
   - Vala: Improved recognition of format strings when the string.printf method
     is used.
   - Glade: xgettext has improved support for GtkBuilder 4.
