intl: Annotate *printf functions with __attribute__ __format__.
Reported by Pierre Ossman <ossman@cendio.se> at
<https://savannah.gnu.org/bugs/?64384>.

* gettext-runtime/intl/libgnuintl.in.h (_INTL_ATTRIBUTE_FORMAT,
_INTL_ATTRIBUTE_SPEC_PRINTF_STANDARD, _INTL_ATTRIBUTE_FORMAT_PRINTF_STANDARD):
New macros.
(fprintf, vfprintf, printf, vprintf, sprintf, vsprintf, snprintf, vsnprintf,
asprintf, vasprintf): Annotate with _INTL_ATTRIBUTE_FORMAT_PRINTF_STANDARD.
* gettext-runtime/intl/printf.c: Update comment.
* gettext-runtime/NEWS: Mention this change.
* NEWS: Likewise.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Version 0.22.5 - February 2024
+
+* The replacements for the printf()/fprintf()/... functions that are
+  provided through <libintl.h> on native Windows and NetBSD now enable
+  GCC's format string analysis (-Wformat).
+
 Version 0.22.4 - November 2023
 
 * Bug fixes:
