xgettext: Vala: Don't flag printf arguments as c-format.
Reported by Anders Jonsson <anders.jonsson@norsjovallen.se>
at <https://savannah.gnu.org/bugs/?64921>.

* gettext-tools/src/xgettext.c (xgettext_record_flag: Recognize also
"undecided-...-format".
* gettext-tools/src/x-vala.c (init_flag_table_vala): Flag the printf function as
'undecided-c-format', not 'c-format'.
* gettext-tools/tests/xgettext-vala-5: Use vprintf instead of printf.
* gettext-tools/tests/xgettext-vala-6: New file.
* gettext-tools/tests/Makefile.am (TESTS): Add it.
* NEWS: Mention the fix.

--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,10 @@ Version 0.22.5 - February 2024
   provided through <libintl.h> on native Windows and NetBSD now enable
   GCC's format string analysis (-Wformat).
 
+* Bug fixes:
+  - xgettext's processing of Vala files with printf method invocations has
+    been corrected (regression in 0.22).
+
 Version 0.22.4 - November 2023
 
 * Bug fixes:
