--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,7 @@ Version 0.22.5 - February 2024
 * Bug fixes:
   - xgettext's processing of Vala files with printf method invocations has
     been corrected (regression in 0.22).
+  - Build fixes on macOS.
 
 Version 0.22.4 - November 2023
 
