--- a/gettext-runtime/po/ro.po
+++ b/gettext-runtime/po/ro.po
@@ -23,7 +23,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gettext-runtime 0.22\n"
 "Report-Msgid-Bugs-To: bug-gettext@gnu.org\n"
-"POT-Creation-Date: 2023-06-15 20:33+0200\n"
+"POT-Creation-Date: 2024-02-21 11:49+0100\n"
 "PO-Revision-Date: 2023-06-18 09:58+0200\n"
 "Last-Translator: Remus-Gabriel Chelu <remusgabriel.chelu@disroot.org>\n"
 "Language-Team: Romanian <translation-team-ro@lists.sourceforge.net>\n"
@@ -31,7 +31,8 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : (n==0 || (n%100 > 0 && n%100 < 20)) ? 1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : (n==0 || (n%100 > 0 && n%100 < "
+"20)) ? 1 : 2);\n"
 "X-Bugs: Report translation errors to the Language-Team address.\n"
 "X-Generator: Poedit 3.2.2\n"
 "X-Poedit-SourceCharset: UTF-8\n"
@@ -44,37 +45,37 @@ msgstr "eroare de scriere"
 msgid "Unknown system error"
 msgstr "Eroare de sistem necunoscută"
 
-#: gnulib-lib/getopt.c:278
+#: gnulib-lib/getopt.c:282
 #, c-format
 msgid "%s: option '%s%s' is ambiguous\n"
 msgstr "%s: opțiunea „%s%s” este ambiguă\n"
 
-#: gnulib-lib/getopt.c:284
+#: gnulib-lib/getopt.c:288
 #, c-format
 msgid "%s: option '%s%s' is ambiguous; possibilities:"
 msgstr "%s: opțiunea „%s%s” este ambiguă; posibilități:"
 
-#: gnulib-lib/getopt.c:319
+#: gnulib-lib/getopt.c:322
 #, c-format
 msgid "%s: unrecognized option '%s%s'\n"
 msgstr "%s: opțiune nerecunoscută „%s%s”\n"
 
-#: gnulib-lib/getopt.c:345
+#: gnulib-lib/getopt.c:348
 #, c-format
 msgid "%s: option '%s%s' doesn't allow an argument\n"
 msgstr "%s: opțiunea „%s%s” nu permite un argument\n"
 
-#: gnulib-lib/getopt.c:360
+#: gnulib-lib/getopt.c:363
 #, c-format
 msgid "%s: option '%s%s' requires an argument\n"
 msgstr "%s: opțiunea „%s%s” necesită un argument\n"
 
-#: gnulib-lib/getopt.c:621
+#: gnulib-lib/getopt.c:624
 #, c-format
 msgid "%s: invalid option -- '%c'\n"
 msgstr "%s: opțiune nevalidă -- „%c”\n"
 
-#: gnulib-lib/getopt.c:636 gnulib-lib/getopt.c:682
+#: gnulib-lib/getopt.c:639 gnulib-lib/getopt.c:685
 #, c-format
 msgid "%s: option requires an argument -- '%c'\n"
 msgstr "%s: opțiunea necesită un argument -- „%c”\n"
@@ -204,7 +205,8 @@ msgid ""
 msgstr ""
 "Raportați erorile în sistemul de urmărire a erorilor la <%s>\n"
 "sau prin e-mail la <%s>.\n"
-"Raportați erorile de traducere la <translation-team-ro@lists.sourceforge.net>\n"
+"Raportați erorile de traducere la <translation-team-ro@lists.sourceforge."
+"net>\n"
 
 #: src/envsubst.c:451
 #, c-format
@@ -251,7 +253,9 @@ msgstr "  -c, --context=CONTEXT       specifică contextul pentru MSGID\n"
 #: src/gettext.c:265 src/ngettext.c:231
 #, c-format
 msgid "  -e                        enable expansion of some escape sequences\n"
-msgstr "  -e                          activează expansiunea unor caractere de eludare\n"
+msgstr ""
+"  -e                          activează expansiunea unor caractere de "
+"eludare\n"
 
 #: src/gettext.c:267
 #, c-format
@@ -280,7 +284,8 @@ msgstr "  -h, --help                  afișează acest mesaj de ajutor și iese\
 #: src/gettext.c:279 src/ngettext.c:246
 #, c-format
 msgid "  -V, --version             display version information and exit\n"
-msgstr "  -V, --version               afișează informații despre versiune și iese\n"
+msgstr ""
+"  -V, --version               afișează informații despre versiune și iese\n"
 
 #: src/gettext.c:283
 #, c-format, no-wrap
@@ -328,18 +333,26 @@ msgstr "  -d, --domain=DOMENIU_TEXT   preia mesajul tradus din DOMENIU_TEXT\n"
 
 #: src/ngettext.c:235
 #, c-format
-msgid "  [TEXTDOMAIN]              retrieve translated message from TEXTDOMAIN\n"
+msgid ""
+"  [TEXTDOMAIN]              retrieve translated message from TEXTDOMAIN\n"
 msgstr "  [DOMENIU_TEXT]              preia mesajul tradus din DOMENIU_TEXT\n"
 
 #: src/ngettext.c:237
 #, c-format
-msgid "  MSGID MSGID-PLURAL        translate MSGID (singular) / MSGID-PLURAL (plural)\n"
-msgstr "  MSGID MSGID-PLURAL          traduce MSGID (singular) / MSGID-PLURAL (plural)\n"
+msgid ""
+"  MSGID MSGID-PLURAL        translate MSGID (singular) / MSGID-PLURAL "
+"(plural)\n"
+msgstr ""
+"  MSGID MSGID-PLURAL          traduce MSGID (singular) / MSGID-PLURAL "
+"(plural)\n"
 
 #: src/ngettext.c:239
 #, c-format
-msgid "  COUNT                     choose singular/plural form based on this value\n"
-msgstr "  CONTOR                      alege forma de singular/plural pe baza acestei valori \n"
+msgid ""
+"  COUNT                     choose singular/plural form based on this value\n"
+msgstr ""
+"  CONTOR                      alege forma de singular/plural pe baza acestei "
+"valori \n"
 
 #: src/ngettext.c:250
 #, c-format, no-wrap
