doc: Small updates.
* DEPENDENCIES: Document --with-libncurses-prefix instead of
--with-ncurses-prefix, since that is what the option would be if
AC_LIB_LINKFLAGS_BODY([ncurses]) was actually in use.
* HACKING: Stop suggesting Java 7 implementations, since Java 7 support has
ended. Suggest to create 3 more locales, needed to avoid SKIPs of gnulib tests.

--- a/HACKING
+++ b/HACKING
@@ -194,9 +194,9 @@ are skipped. To this effect, you need to install also:
     + Homepage: http://openjdk.java.net/
   + Pre-built package name:
     - On Debian and Debian-based systems:
-      openjdk-11-jdk or openjdk-8-jdk or openjdk-7-jdk, default-jdk,
+      openjdk-11-jdk or openjdk-8-jdk, default-jdk,
     - On Red Hat distributions:
-      java-11-openjdk or java-1.8.0-openjdk or java-1.7.0-openjdk.
+      java-11-openjdk-devel or java-1.8.0-openjdk-devel.
     - Other: https://repology.org/project/openjdk/versions
 
   * A C# compiler
@@ -332,14 +332,17 @@ also need to install:
 And you need to install a couple of locales, used by the tests.
 By default, only those enabled in /etc/locale.gen are preinstalled.
 
+$ sudo localedef -i ar_SA -f ISO-8859-6 ar_SA.ISO-8859-6
 $ sudo localedef -i de_DE -f ISO-8859-1 de_DE.ISO-8859-1
 $ sudo localedef -i de_DE -f UTF-8 de_DE.UTF-8
+$ sudo localedef -i es_ES -f UTF-8 es_ES.UTF-8
 $ sudo localedef -i fa_IR -f UTF-8 fa_IR
 $ sudo localedef -i fr_FR -f ISO-8859-1 fr_FR.ISO-8859-1
 $ sudo localedef -i fr_FR -f UTF-8 fr_FR.UTF-8
 $ sudo localedef -i ja_JP -f EUC-JP ja_JP.EUC-JP
 $ sudo localedef -i tr_TR -f UTF-8 tr_TR.UTF-8
 $ sudo localedef -i zh_CN -f GB18030 zh_CN.GB18030
+$ sudo localedef -i zh_HK -f BIG5-HKSCS zh_HK.BIG5-HKSCS
 
 
 Building off the Git repository
