--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,10 @@
 Version 0.23 - August 2024
 
 * Programming languages support:
-  - Python: xgettext now recognizes the f-string syntax.
+  - Python:
+    o xgettext now assumes source code for Python 3 rather than Python 2.
+      This affects the interpretation of escape sequences in string literals.
+    o xgettext now recognizes the f-string syntax.
   - Java: Improved recognition of format strings when the String.formatted
     method is used.
   - Vala: Improved recognition of format strings when the string.printf method
