--- a/gettext-tools/doc/lang-sh.texi
+++ b/gettext-tools/doc/lang-sh.texi
@@ -1,5 +1,5 @@
 @c This file is part of the GNU gettext manual.
-@c Copyright (C) 1995-2020 Free Software Foundation, Inc.
+@c Copyright (C) 1995-2024 Free Software Foundation, Inc.
 @c See the file gettext.texi for copying conditions.
 
 @node sh
@@ -51,6 +51,9 @@ use
 
 @item Formatting with positions
 ---
+@c Not yet: It requires support in GNU coreutils, GNU bash, dash, etc.
+@c @url{https://pubs.opengroup.org/onlinepubs/9799919799/utilities/printf.html,
+@c      @code{printf}}
 
 @item Portability
 fully portable
