--- a/gettext-tools/doc/msgcomm.texi
+++ b/gettext-tools/doc/msgcomm.texi
@@ -1,5 +1,5 @@
 @c This file is part of the GNU gettext manual.
-@c Copyright (C) 1995-2019 Free Software Foundation, Inc.
+@c Copyright (C) 1995-2024 Free Software Foundation, Inc.
 @c See the file gettext.texi for copying conditions.
 
 @pindex msgcomm
@@ -192,6 +192,8 @@ Sort output by file location.
 @item --omit-header
 @opindex --omit-header@r{, @code{msgcomm} option}
 Don't write header with @samp{msgid ""} entry.
+Note: Using this option may lead to an error in subsequent operations
+if the output contains non-ASCII characters.
 
 @end table
 
